Add browser-only JupyterLite category
